--- a/TMFMP/TMF MP.csproj
+++ b/TMFMP/TMF MP.csproj
@@ -138,14 +138,14 @@
     <Compile Include="Application\TMGlobals.cs" />
     <Compile Include="Events\NetEvents.cs" />
     <Compile Include="IO\IOMethods.cs" />
-    <Compile Include="Network\MemBuffer.cs" />
-    <Compile Include="NewNetwork\NetGlobals.cs" />
-    <Compile Include="NewNetwork\NetMethods.cs" />
-    <Compile Include="NewNetwork\NetworkConnectionUtils.cs" />
-    <Compile Include="NewNetwork\NetworkEnums.cs" />
-    <Compile Include="NewNetwork\NetworkExtensions.cs" />
-    <Compile Include="NewNetwork\NetworkSessionPropertiesExtended.cs" />
-    <Compile Include="NewNetwork\Packet.cs" />
+    <Compile Include="Network\Data\MemBuffer.cs" />
+    <Compile Include="Network\NetGlobals.cs" />
+    <Compile Include="Network\NetMethods.cs" />
+    <Compile Include="Network\NetworkConnectionUtils.cs" />
+    <Compile Include="Network\NetworkEnums.cs" />
+    <Compile Include="Network\NetworkExtensions.cs" />
+    <Compile Include="Network\NetworkSessionPropertiesExtended.cs" />
+    <Compile Include="Network\Data\Packet.cs" />
     <Compile Include="PluginInterfaces\PluginAvailableNetworkSession.cs" />
     <Compile Include="PluginInterfaces\PluginMain.cs" />
     <Compile Include="PluginInterfaces\PluginNetMain.cs" />
