--- a/TMFMP/TMF MP.csproj
+++ b/TMFMP/TMF MP.csproj
@@ -46,6 +46,9 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>..\..\Harmony\Harmony\bin\Debug\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -78,40 +81,52 @@
     </Reference>
     <Reference Include="StudioForge.BlockWorld">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.BlockWorld.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Core">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Core.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Game">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Game.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.GamerServices">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.GamerServices.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Graphics3D">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Graphics3D.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Graphics3D_Pipeline">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Graphics3D_Pipeline.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.GUI">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.GUI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Integration">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Integration.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Net, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Net.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Renderers">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Renderers.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.Engine.Services">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.Engine.Services.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="StudioForge.TotalMiner.API">
       <HintPath>D:\PC\Steam\steamapps\common\Total Miner\StudioForge.TotalMiner.API.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System">
       <Private>False</Private>
@@ -134,9 +149,10 @@
   <ItemGroup>
     <Compile Include="Application\AppUtils.cs" />
     <Compile Include="Application\DrawUtils.cs" />
+    <Compile Include="Application\EmbeddedAssembly.cs" />
     <Compile Include="Application\Globals.cs" />
+    <Compile Include="Application\LocalData.cs" />
     <Compile Include="Application\TMGlobals.cs" />
-    <Compile Include="Events\NetEvents.cs" />
     <Compile Include="IO\IOMethods.cs" />
     <Compile Include="Network\Data\MemBuffer.cs" />
     <Compile Include="Network\SessionPropertiesExtended.cs" />
@@ -146,6 +162,8 @@
     <Compile Include="Network\NetworkEnums.cs" />
     <Compile Include="Network\NetworkExtensions.cs" />
     <Compile Include="Network\Data\Packet.cs" />
+    <Compile Include="Patch\NetworkModActivatePatch.cs" />
+    <Compile Include="Patch\PatchGlobals.cs" />
     <Compile Include="PluginInterfaces\PluginAvailableNetworkSession.cs" />
     <Compile Include="PluginInterfaces\PluginMain.cs" />
     <Compile Include="PluginInterfaces\PluginNetMain.cs" />
@@ -154,29 +172,30 @@
     <Compile Include="PluginInterfaces\PluginProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\TMReflection.cs" />
-    <Compile Include="TMInternal\CharacterSkillData.cs" />
     <Compile Include="TMInternal\GameInstance.cs" />
     <Compile Include="TMInternal\Hand.cs" />
     <Compile Include="TMInternal\MapModel.cs" />
-    <Compile Include="TMInternal\MapRenderer.cs" />
-    <Compile Include="TMInternal\MapTM.cs" />
-    <Compile Include="TMInternal\NetworkManager.cs" />
-    <Compile Include="TMInternal\NpcBase.cs" />
-    <Compile Include="TMInternal\NpcManager.cs" />
     <Compile Include="Application\TMUtils.cs" />
-    <Compile Include="TMInternal\ScreenManager.cs" />
     <Compile Include="TMInternal\TotalMinerGame.cs" />
-    <Compile Include="TMInternal\VoxelModelManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GUI\" />
     <Folder Include="TMInternal\Internal Extensions\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\defaultsettings.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\0Harmony.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "C:\Users\treya\Documents\My Games\TotalMinerBetaNet\Mods\TMFMP\$(TargetName).dll"
-copy /Y "$(TargetDir)$(TargetName).pdb" "C:\Users\treya\Documents\My Games\TotalMinerBetaNet\Mods\TMFMP\$(TargetName).pdb"</PostBuildEvent>
+    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "C:\Users\treya\Documents\My Games\TotalMiner\Mods\TMFMP\$(TargetName).dll"
+copy /Y "$(TargetDir)$(TargetName).pdb" "C:\Users\treya\Documents\My Games\TotalMiner\Mods\TMFMP\$(TargetName).pdb"</PostBuildEvent>
   </PropertyGroup>
   <!--
       To modify your build process, add your task inside one of the targets below and uncomment it. 
